2004-11-29 Bart Hakvoort  <gparted@users.sf.net>

	* Every devicescan now tests on beforehand if the kernel is able to reread the partitiontable. If the kernel is unable to do
	  this, i disallow most operations. This may seem weird and even a bad thing to do, but the fact is it protects
	  the innocent user from a lot of potential damage. Till the linuxkernel is able to reread partitiontables no matter what, this seems
	  to be the best option. Of course a dialog with information will popup whenever such a situation is encountered.
	  In a next release i might consider adding an 'advanced mode' for users who know what they're doing.

2004-11-28  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS. 

2004-11-28 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Partition_New.cc: selecting 'extended partition' twice caused a segfault. i cannot believe i didn't detect this bug earlier :| Fixed.
	  also made it possible to create an unformatted partition.
	* src/GParted_Core.cc: backend support for creating partition without filesystem (unformatted).

2004-11-28 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Disklabel.cc,
	  src/GParted_Core.cc: minor stringchanges (typos)

2004-11-28 Bart Hakvoort  <gparted@users.sf.net>

	* src/Makefile.am: sorted sourcefiles alphabetically, i know, pretty useless, but i like it :P

2004-11-28 Bart Hakvoort  <gparted@users.sf.net>

	* Harddisks without disklabel are now properly initizalized and shown in the menu. When one tries to create a new partition on
	  such a disk a dialog pops up with some blabla about disklabels and offers to create a disklabel. sweet :P (special thanks to mantiena-baltix 
	  for bringing this issue to my attention)
	* fixed minor annoyance with refreshing detailed deviceinfo after a 'deep refresh'

2004-11-24 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Partition_Resize_Move.cc: fixed small bug with resizing and lower limits.